closes #30635 @1h: example documents are now loaded via classLoader.